# slideshow

./: .gitignore  BACKLOG.txt  Cargo.toml  README.md  rust-toolchain.toml
resources/: basic_150.vert.wgsl  distortion.frag.wgsl  distortion_150.glslf  simple.frag.wgsl  simple.vert.wgsl  sphere.frag.wgsl  sphere_150.frag.glsl  sphere_150.frag.wgsl
src/: fade.rs  fight.rs  flow.rs  fps.rs  ggez_utils.rs  globals.rs  grid.rs  main.rs  pixels.rs  quad.rs  quads.rs  slides.rs  slideshow.rs  sync_timer.rs  transition.rs  utils.rs  velocity.rs
src/transitions/: distortion.rs  fade.rs  mod.rs  pixels.rs  quads.rs  slides.rs  sphere.rs  transition.rs
