[package]
name = "slideshow"
version = "0.1.1"
authors = ["Enrico Benedetti"]
edition = "2021"

[features]
# If this feature is enabled, it will add <cargo root dir>/resources/ to
# the resource search path.
cargo-resource-root = []

[dependencies]
ggez = "0.6"
gfx = "0.18.1"
rand = "0.5.5"
lazy_static = "1.1"
image = "0.19"
nalgebra = { version = "0.29", features = ["mint"] }
# I have to force it otherwise I get an "Illegal instruction" error
#x11-dl = "=2.18.3"
separator = "0.3.1"

# for security alerts
#nix = "0.20.2"
#thread_local = "1.1.4"
#regex = "1.5.5"