[package]
name = "slideshow"
version = "0.1.1"
authors = ["Enrico Benedetti"]
edition = "2021"

[features]
# If this feature is enabled, it will add <cargo root dir>/resources/ to
# the resource search path.
cargo-resource-root = []

[dependencies]
crevice = "0.13.0"
ggez = "0.9.3"
gfx = "0.18"
lazy_static = "1.1"
image = "0.23"
nalgebra = { version = "0.29", features = ["mint"] }
rand = "0.5"
separator = "0.4"