[package]
name = "slideshow"
version = "0.1.1"
authors = ["Enrico Benedetti"]
edition = "2021"

[features]
# If this feature is enabled, it will add <cargo root dir>/resources/ to
# the resource search path.
cargo-resource-root = []

[dependencies]
bzip2 = "0.4.4" # for security alert. From ggez
chrono = "0.4"
crevice = "0.13.0"
ggez = "0.9.3"
gfx = "0.18"
lazy_static = "1.1"
image = "0.23"
mio = "0.8.11"# for security alert. From ggez
nalgebra = { version = "0.29", features = ["mint"] }
rand = "0.5"
remove_dir_all = "0.8.0" # for security alert
shlex = "1.3.0"# for security alert. From ggez
separator = "0.4"